<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.dvoracek</groupId>
    <artifactId>ecommerce-platform</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>config-server</module>
        <module>eureka-server</module>
        <module>api-gateway-service</module>
        <module>catalog-service</module>
        <module>user-service</module>
        <module>customer-service</module>
        <module>inventory-service</module>
        <module>order-service</module>
        <module>payment-service</module>
        <module>shipping-service</module>
        <module>common-events</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <!-- Ensures all modules use the same Maven Compiler Plugin version -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <source>11</source>
                        <target>11</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>com.spotify</groupId>
                    <artifactId>dockerfile-maven-plugin</artifactId>
                    <version>1.4.13</version>
                    <executions>
                        <execution>
                            <id>build-docker-image</id>
                            <phase>package</phase>
                            <goals>
                                <goal>build</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <repository>eureka-server</repository>
                        <tag>latest</tag>
                        <dockerfile>Dockerfile</dockerfile>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
